# Ultrabot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  GETTING_STARTED.md  INDEX_RU.md  INSTALL.md  INSTALL_RU.md  Makefile  PROJECT_STATUS.md  QUICKSTART_RU.md  README.md  README_FULL.md  README_RU.md  READY_FOR_DEPLOYMENT_RU.md  START_HERE_RU.md  SUMMARY_RU.md  check_env.py  docker-compose.yml  install-setup.sh  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial.py
docker/: Dockerfile  prometheus.yml
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  secrets.yaml  service.yaml
src/: __init__.py  main.py
src/application/: __init__.py
src/application/ports/: __init__.py
src/application/use_cases/: __init__.py  base.py  deduplicate_news.py  process_feeds.py  publish_news.py  score_news.py  translate_news.py
src/core/: __init__.py  di.py  exceptions.py  logger.py  metrics.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  feed.py  news_item.py  publication.py
src/domain/repositories/: __init__.py
src/domain/services/: __init__.py  hashtag_service.py  scoring_service.py  translator_service.py
src/domain/value_objects/: __init__.py  base.py
src/infrastructure/: __init__.py  di.py
src/infrastructure/cache/: __init__.py  memory_cache.py  (+1 more)
src/presentation/: __init__.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_repositories.py
tests/unit/: test_hashtag_service.py  test_scoring_service.py  test_use_cases.py
(+8 files in other folders)
